--- a/tasks/global_configuration.yml
+++ b/tasks/global_configuration.yml
@@ -1,15 +1,10 @@
 ---
 # tasks file for nat-stack-init
 
-- name: Upload the ec2Mgmt ports.conf
-  s3: bucket="{{ bucket_name.stdout }}" object="ec2Mgmt-{{ item.split('/') | last }}" src="{{ item }}" mode=put s3_url="{{ s3_url }}"
-  with_items:
-  - "/var/tmp/ports.conf"
-
 - name: Upload the ec2Mgmt elb.conf
   s3: bucket="{{ bucket_name.stdout }}" object="ec2Mgmt-{{ item.split('/') | last }}" src="{{ item }}" mode=put s3_url="{{ s3_url }}"
   with_items:
-  - "/var/tmp/elb.conf"
+  - "/var/tmp/target.conf"
 
 # - name: Upload the ec2SFTP ports.conf
 #   s3: bucket="{{ bucket_name.stdout }}" object="ec2SFTP-{{ item.split('/') | last }}" src="{{ item }}" mode=put s3_url="{{ s3_url }}"
